dilang-interpreter/test/cases/errors/cap_not_in_scope.di
capability Logger { fn info(msg: Str) }

fn main() {
    Logger.info("oops")
}
